  (by enabling it in the Makefile, however AES is not yet fully working)

18. Mar. 2002
- bios/kprint.c - registers are printed out to ease debugging (joy)

20. Mar. 2002
- The AES are now succeed in loading and running DESKTOP.APP from disk! (THH)
- Moved some more VDI variables to lineavars.S (THH)
- Cleaned up the VDI, it works now quite good in ST-HIGH resolution (THH)

21. Mar. 2002
- doc/changelog.txt - added vdi/ and aes/ to the tgz target (MAD)
- doc/license.txt   - added GPL for EmuTOS (MAD)

25. Mar. 2002
- Included the GEM.RSC into the ROM (THH).

26. Mar. 2002
- bdos/biosmain.c - made DBGIFOS working by disabl. osif  (MAD)
- bdos/umem.c  switched off DBGUMEM and assert by default (MAD)

28. Mar. 2002
- bios/startup.S - changed the _dummyaes vector for fVDI (MAD)
- bios/startup.S - changed label _dummyaes to _gemtrap (MAD)

01. Apr. 2002
- vdi/lisagem.S - SR switched on for timer interrupt (MAD)
- bios/startup.S - did switch on the etv_timer interrupt vector (MAD)

02. Apr. 2002
- vdi/lisagem.S - put mouse drawing additionally to timer_int (MAD)
- vdi/lisagem.S - put _CLEARMEM to vdi/monout.c (MAD)

04. Apr. 2002
- desk/*  -  Added the desktop sources (THH).

05. Apr. 2002
- newer bug - handles different encoding for different languages (LVL)
- added administrative entry in fr.po and de.po (LVL)
- encoding specified in po/LINGUAS (LVL)
- started removing Kamenicky encoding (LVL)
- doc/todo.txt: added 'Czech i18n' section (LVL)
- added version 0.2a in include/version.h, printed by initinfo.c (LVL)
- make release generates a TGZ named after include/version.h (LVL)
- GPL re-formatted to 72 chars wide (copied over the standard file) (LVL)
- cookie_swi commented out in bios/machine.c (bus error in some cases) (LVL)
- misc involuntary whitespace changes in some files (LVL)
- added po/cs.po from Bohdan for Czech native language support  (MAD)

08. Apr. 2002
- bios/mousedrv.S cleaned up a bit. (MAD)